--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <title>Hover | Transform Y()</title>
   </head>
   <body>
-    <div class="container">
+    <main class="site-content">
+      <div class="container">
         <div class="card">
       <div class="card-hover">Hello world</div>
     </div>
+    </main>
+    
   </body>
     </div>
 </html>
